# dsa-scheduler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README_SB  config.cmake  make.config  make.rules
configs/: DSAGenMesh.PE16-MaxI64-AddI64-MulI64-FAddD64-FMulD64-Copy-MinI64.SW25.DMA1.SPM1.REC1.GEN1.REG1.IVP3.OVP2.20220127-103840.json  DSAGen_5COMP_4VP_1MEM_20211114-192844.json  DSAGen_5COMP_4VP_1MEM_20211121-112638.json  DSAGen_7COMP_4VP_1MEM_20211202-173223.json  _Z6kernelPlS_S__dfg_0.dfg  _Z6kernelPlS_S__dfg_0.dfg.h  dev_row3_col3.json  diannao_simd64.sbmodel  diannao_simd64_fx.sbmodel  diannao_simd64_half.sbmodel  diannao_simd64_trim.sbmodel  dse.enc.full.ssinst.sbmodel  dse_enc_all_inst.py  enc.full.ssinst.sbmodel  full.ssinst.sbmodel  init-big.sbmodel  initial-dse.sbmodel  intial-small.sbmodel  isca2017.sbmodel  large.sbmodel  mesh-adg-example-20220104.json  revel-1x1.sbmodel  revel-1x2.sbmodel  revel-2x2.sbmodel  revel-3x2.sbmodel  revel-3x3.sbmodel  revel-4x4.sbmodel  revel-5x5.sbmodel  revel-large.sbmodel  revel-special.sbmodel  revel.sbmodel  softbrain_5x4.sbmodel  softbrain_8x8.sbmodel  sparse-init.sbmodel  spu_merge_test.sbmodel
dfgs/: 2neural-pred.sb_dfg  fourth_neural.sb_dfg  half_neural.sb_dfg  neural.sb_dfg  neural2.sb_dfg  one_neuron.sb_dfg  simd_2neural.sb_dfg
dfgs/5x4/: add16to32x4.dfg  divrem.dfg  double_bfs.dfg  multi.dfg  run-all-sched.sh  run-sched.sh  sihao.dfg  spmv_upscale.dfg
dfgs/5x5/: mv_unroll_0_1.dfg
dfgs/8x8/: softbrain_beta_8x8.sbmodel
drivers/: CMakeLists.txt  Makefile  constraints_manual.gams  resched.cpp  reschedule.cpp  sb_dfg_emu.cpp  sb_sched  sb_sched.cpp  ss_dse.cpp  ss_sched.cpp  standalone_run.sh  standalone_sim.cpp  stat-config.cpp  test_standalone.dfg
estimation-models/: pe_model.pt  router_model.pt  vport_model.pt
estimation-models/input_vector_port/: input_vector_port_info.txt  input_vector_port_model.pt
estimation-models/output_vector_port/: output_vector_port_model.pt  output_vector_port_model_info.txt
estimation-models/processing_element/: pe_model_ff.pt  pe_model_info_ff.txt  pe_model_info_logic_lut.txt  pe_model_info_ram_lut.txt  pe_model_info_total_lut.txt  pe_model_logic_lut.pt  pe_model_ram_lut.pt  pe_model_total_lut.pt  processing_element_model.pt  processing_element_model_info.txt
estimation-models/switch/: switch_model.pt  switch_model_ff.pt  switch_model_info.txt  switch_model_info_ff.txt  switch_model_info_logic_lut.txt  switch_model_info_ram_lut.txt  switch_model_info_total_lut.txt  switch_model_logic_lut.pt  switch_model_ram_lut.pt  switch_model_total_lut.pt
gams-server/: Makefile  gams-client.c  gams-server.c  gams-server.py
gams-server/test/: constraints.gams  dyser.gams  dyser_kind.gams  dyser_model.gams  dyser_pdg.gams
inc/: dypdg.h  schedule.h  scheduler.h
include/: debug.h
include/dsa/: debug.h
src/: .gitignore  Makefile  bitslice.h  color_mapper.cpp  color_mapper.h  config_defs.h  dfg-parser.l  dfg-parser.y  dypdg.cpp  dypdg.h  dyser_gams.cpp  dyser_gams_hw.cpp  hw_model.cpp  hw_model2.cpp  hw_model3.cpp  multi_model.cpp  origianl_scheduler.cpp  original_scheduler.h  sbpdg.cpp  sbpdg.h  schedule.cpp  schedule.h  scheduler.cpp  scheduler.h  scheduler_bk.cpp  scheduler_bkt.cpp  scheduler_bkt.h  scheduler_gams.cpp  scheduler_gams.h  scheduler_greedy.cpp  scheduler_greedy.h  scheduler_mlg.cpp  scheduler_mlg.h  scheduler_sa.cpp  scheduler_sa.h  scheduler_sg.cpp  scheduler_sg.h  serialize-sbpdg.cpp  serialize-schedule.cpp  single_fixed_general.cpp  (+4 more)
src/arch/: estimation.cpp  fabric.cpp  fu_model.cpp  model.cpp  pa_model.cpp  predict.cpp  spad.cpp  sub_model.cpp  utils.cpp  visitor.cpp
src/config/: .gitignore  CMakeLists.txt  Makefile  direction.cpp  direction.h  fixed_point.h  fu_model.cpp  fu_model.h  full.sbinst  full.ssinst  inst_model  inst_model.cpp  inst_model.h  model.cpp  model.h  model_parsing.cpp  model_parsing.h  pa_model.cpp  pa_model.h  predict.cpp  predict.h  sbinst.cpp  sbinst.h  ssinst.h  sub_model.cpp  sub_model.h
src/config/.deps/: direction.Td  fu_model.Td  model.Td  model_parsing.Td  sbinst.Td  sub_model.Td
src/config/insts16/: Acc16.h  Control16.h  Div16.h  ICmpNE16.h  IndexMatch16.h  Keep16.h  Min16.h  Or16.h  RShf16.h  ReLU16.h  Select16.h
src/config/insts32/: Concat32.h  FMul.h
src/config/insts64/: Acc16to32x4.h  And.h  And3.h  BackMul32x2.h  BackNormRed32x2.h  BackSub32x2.h  Compare64.h  Concat64.h  CplxGivensSin.h  CplxInvConj.h  CplxSqrt.h  CplxSqrtInv.h  DecodeRLE.h  Div16x4.h  DivRem64.h  DupLow32.h  Extract16.h  FAcc32x2.h  FMulX32x2.h  FxAcc16x4.h  FxAddSub16x4.h  FxDiv16x4.h  FxExp16x4.h  FxMul32x2.h  FxRed32x2.h  FxRelu16x4.h  FxSub16x4.h  FxSubAdd16x4.h  Hold.h  HouseHolder.h  ICmpG.h  ICmpNE.h  ImplicitQR.h  IndexMatch32x2.h  IndexMatch64.h  Index_match.h  MacRed16x2.h  MatchIndex2.h  MergeSentinal.h  Min16x4.h  (+14 more)
src/core/: singleton.cpp  utils.cpp
src/dfg/: .gitignore  array.cpp  dfg-parser.l  dfg-parser.y  instruction.cpp  node.cpp  port.cpp  ssdfg.cpp  symbols.cpp  utils.cpp  visitor.cpp
src/gams_models/: .stage_model.gms.swo  hw_model.gms  hw_model.h  hw_model2.gms  hw_model2.h  hw_model3.gms  hw_model3.h  multi_model.h  single_fixed_general.h  softbrain_gams.gms  softbrain_gams.h  softbrain_gams_hw.h  spill_model.h  stage_model.gms  stage_model.h  timing_model.gms  timing_model.h
src/insts/: .gitignore  full.ssinst  (+4 more)
src/scheduler/: .gitignore  CMakeLists.txt  Makefile  bitslice.h  color_mapper.cpp  color_mapper.h  dfg-parser.h  dfg-parser.l  dfg-parser.tab.cc  dfg-parser.tab.h  dfg-parser.y  dfg-parser.yy.cc  dse.cpp  dse.h  metadata.h  sbpdg.cpp  sbpdg.h  schedule.cpp  schedule.h  scheduler.cpp  scheduler.h  scheduler_gams.cpp  scheduler_gams.h  scheduler_sa.cpp  scheduler_sa.h  scheduler_sg.cpp  scheduler_sg.h  serialization.h  serialize-sbpdg.cpp  serialize-schedule.cpp  serialize-ssdfg.cpp  serialize-sspdg.cpp  ssdfg.cpp  ssdfg.h  sspdg.cpp  sspdg.h
src/scheduler/gams_models/: hw_model3.gms  multi_model.gms  single_fixed_general.gms  softbrain_gams_hw.gms  spill_model.gms
test_config/: Makefile  client.cpp
(+190 files in other folders)
